--- a/group_chat.html
+++ b/group_chat.html
@@ -116,7 +116,7 @@
                                 <ul id="myTab" class="nav nav-tabs">
                                     <li class="active"><a href="#home" data-toggle="tab">Group <button type="button" class="btn btn-default btn-xs"><i class="fa fa-sign-out"></i></button></a>
                                     </li>
-                                    <li><a href="#profile" data-toggle="tab">To-do ListGroup Work Assignment.xlsx</a>
+                                    <li><a href="#profile" data-toggle="tab">Shared Jobs</a>
                                     </li>
                                     <li><a href="#myTasks" data-toggle="tab">My Tasks</a>
                                     </li>
@@ -560,12 +560,12 @@
             }else{
                 $(this).addClass('voted');
                 $(this).next().addClass('voted');
-                $(this).parent().parent().css('background-color','#aaaaaa');
+                $(this).parent().parent().css('background-color','#cccccc');
                 var $now = parseInt($(this).find("span").text());
                 $now = $now + 1;
                 $(this).find("span").text($now);
                 if($now >= 4){
-                    $(this).parent().parent().css('background-color','#a8e09f');
+                    $(this).parent().parent().css('background-color','rgb(153,206,125)');
                 }
             }
             e.stopPropagation();
@@ -577,7 +577,7 @@
             }else{
                 $(this).addClass('voted');
                 $(this).prev().addClass('voted');
-                $(this).parent().parent().css('background-color','#aaaaaa');
+                $(this).parent().parent().css('background-color','#cccccc');
                 var $now = parseInt($(this).find("span").text());
                 $now = $now + 1;
                 $(this).find("span").text($now);
