update group work assignment sheet

--- a/group_chat.html
+++ b/group_chat.html
@@ -116,7 +116,7 @@
                                 <ul id="myTab" class="nav nav-tabs">
                                     <li class="active"><a href="#home" data-toggle="tab">Group <button type="button" class="btn btn-default btn-xs"><i class="fa fa-sign-out"></i></button></a>
                                     </li>
-                                    <li><a href="#profile" data-toggle="tab">To-do ListGroup Work Assignment.xlsx</a>
+                                    <li><a href="#profile" data-toggle="tab">To-do List</a>
                                     </li>
                                     <li><a href="#myTasks" data-toggle="tab">My Tasks</a>
                                     </li>
