Update Stand-up file name

--- a/group_chat.html
+++ b/group_chat.html
@@ -50,8 +50,6 @@
                     </div>
                 </form>
                 <ul class="nav navbar navbar-top-links navbar-left mbn text-right">
-                    <li class="dropdown"><a data-hover="dropdown" href="#" class="dropdown-toggle"><i class="fa fa-envelope fa-fw"></i><span class="badge badge-orange">7</span></a>
-                    </li>
                     <li class="dropdown topbar-user">
                         <a data-hover="dropdown" href="#" class="dropdown-toggle"><img src="./images/User1.png" alt="" class="img-responsive img-circle" />&nbsp;<span class="hidden-xs">John Doe</span>&nbsp;<span class="caret"></span>
                         </a>
@@ -127,23 +125,23 @@
                                             <div class="chat-scroller">
                                                 <ul class="chats">
                                                     <li class="in"><img src="./images/User3.png" class="avatar img-responsive" />
-                                                        <div class="message"><span class="chat-arrow"></span><a href="#" class="chat-name">Robin</a>&nbsp;<span class="chat-datetime">at July 06, 2014 17:06</span><span class="chat-body">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</span>
+                                                        <div class="message"><span class="chat-arrow"></span><a href="#" class="chat-name">Robin</a>&nbsp;<span class="chat-datetime">at July 06, 2014 17:06</span><span class="chat-body">Hey, how are you guys doing today?</span>
                                                         </div>
                                                     </li>
                                                     <li class="out"><img src="./images/User1.png" class="avatar img-responsive" />
-                                                        <div class="message"><span class="chat-arrow"></span><a href="#" class="chat-name">Me</a>&nbsp;<span class="chat-datetime">at July 06, 2014 18:06</span><span class="chat-body">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</span>
+                                                        <div class="message"><span class="chat-arrow"></span><a href="#" class="chat-name">Me</a>&nbsp;<span class="chat-datetime">at July 06, 2014 18:06</span><span class="chat-body">Hi, guys, I just took Timmy to the vet. He is alright now</span>
                                                         </div>
                                                     </li>
                                                     <li class="in"><img src="./images/User2.png" class="avatar img-responsive" />
-                                                        <div class="message"><span class="chat-arrow"></span><a href="#" class="chat-name">Ted</a>&nbsp;<span class="chat-datetime">at July 06, 2014 17:06</span><span class="chat-body">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</span>
+                                                        <div class="message"><span class="chat-arrow"></span><a href="#" class="chat-name">Ted</a>&nbsp;<span class="chat-datetime">at July 06, 2014 17:06</span><span class="chat-body">That is a relief thank you, John</span>
                                                         </div>
                                                     </li>
                                                     <li class="out"><img src="./images/User1.png" class="avatar img-responsive" />
-                                                        <div class="message"><span class="chat-arrow"></span><a href="#" class="chat-name">Me</a>&nbsp;<span class="chat-datetime">at July 06, 2014 18:06</span><span class="chat-body">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</span>
+                                                        <div class="message"><span class="chat-arrow"></span><a href="#" class="chat-name">Me</a>&nbsp;<span class="chat-datetime">at July 06, 2014 18:06</span><span class="chat-body">No worries, Ted</span>
                                                         </div>
                                                     </li>
                                                     <li class="in"><img src="./images/User3.png" class="avatar img-responsive" />
-                                                        <div class="message"><span class="chat-arrow"></span><a href="#" class="chat-name">Robin</a>&nbsp;<span class="chat-datetime">at July 06, 2014 17:06</span><span class="chat-body">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</span>
+                                                        <div class="message"><span class="chat-arrow"></span><a href="#" class="chat-name">Robin</a>&nbsp;<span class="chat-datetime">at July 06, 2014 17:06</span><span class="chat-body">I think we have completed most of the task, shall we look for a new job now</span>
                                                         </div>
                                                     </li>
                                                 </ul>
@@ -171,15 +169,21 @@
                                                         <div class="todo-check pull-left">
                                                             <div class="icheckbox_minimal-grey" style="position: relative;"><input type="checkbox" value="" style="position: absolute; top: -20%; left: -20%; display: block; width: 140%; height: 140%; margin: 0px; padding: 0px; background: rgb(255, 255, 255); border: 0px; opacity: 0;"><ins class="iCheck-helper" style="position: absolute; top: -20%; left: -20%; display: block; width: 140%; height: 140%; margin: 0px; padding: 0px; background: rgb(255, 255, 255); border: 0px; opacity: 0;"></ins></div>
                                                         </div>
-                                                        <div class="todo-title">Sed ut perspiciatis unde omnis iste</div>
-                                                        <div class="todo-actions pull-right clearfix"><a href="#" class="todo-agree"><i class="fa fa-thumbs-up"></i><span class="badge badge-green">3</span></a><a href="#" class="todo-disagree"> <i class="fa fa-thumbs-down"></i><span class="badge badge-red">0</span></a>
+                                                        <div class="todo-title">
+                                                            <h5>Jojo</h5>
+                                                            <p>I am leaving for a business trip, need someone to take care of my cat</p>
+                                                        </div>
+                                                        <div class="todo-actions pull-right"><a href="#" class="todo-agree"><i class="fa fa-thumbs-up"></i><span class="badge badge-green">3</span></a><a href="#" class="todo-disagree"> <i class="fa fa-thumbs-down"></i><span class="badge badge-red">0</span></a>
                                                         </div>
                                                     </li>
                                                     <li class="clearfix"><span class="drag-drop"><i></i></span>
                                                         <div class="todo-check pull-left">
                                                             <div class="icheckbox_minimal-grey" style="position: relative;"><input type="checkbox" value="" style="position: absolute; top: -20%; left: -20%; display: block; width: 140%; height: 140%; margin: 0px; padding: 0px; background: rgb(255, 255, 255); border: 0px; opacity: 0;"><ins class="iCheck-helper" style="position: absolute; top: -20%; left: -20%; display: block; width: 140%; height: 140%; margin: 0px; padding: 0px; background: rgb(255, 255, 255); border: 0px; opacity: 0;"></ins></div>
                                                         </div>
-                                                        <div class="todo-title">Sed ut perspiciatis unde omnis iste</div>
+                                                        <div class="todo-title">
+                                                            <h5>Cathy</h5>
+                                                            <p>We will be on a short trip, need a place to foster my cat</p>
+                                                        </div>
                                                         <div class="todo-actions pull-right clearfix"><a href="#" class="todo-agree"><i class="fa fa-thumbs-up"></i><span class="badge badge-green">1</span></a><a href="#" class="todo-disagree"> <i class="fa fa-thumbs-down"></i><span class="badge badge-red">2</span></a>
                                                         </div>
                                                     </li>
@@ -187,7 +191,10 @@
                                                         <div class="todo-check pull-left">
                                                             <div class="icheckbox_minimal-grey" style="position: relative;"><input type="checkbox" value="" style="position: absolute; top: -20%; left: -20%; display: block; width: 140%; height: 140%; margin: 0px; padding: 0px; background: rgb(255, 255, 255); border: 0px; opacity: 0;"><ins class="iCheck-helper" style="position: absolute; top: -20%; left: -20%; display: block; width: 140%; height: 140%; margin: 0px; padding: 0px; background: rgb(255, 255, 255); border: 0px; opacity: 0;"></ins></div>
                                                         </div>
-                                                        <div class="todo-title">Sed ut perspiciatis unde omnis iste</div>
+                                                        <div class="todo-title">
+                                                            <h5>Tee</h5>
+                                                            <p>Need help for walking dog.</p>
+                                                        </div>
                                                         <div class="todo-actions pull-right clearfix"><a href="#" class="todo-agree"><i class="fa fa-thumbs-up"></i><span class="badge badge-green">0</span></a><a href="#" class="todo-disagree"> <i class="fa fa-thumbs-down"></i><span class="badge badge-red">3</span></a>
                                                         </div>
                                                     </li>
@@ -326,18 +333,18 @@
                                         <div style="overflow: hidden;" class="portlet-body">
                                             <div class="slimScrollDiv" style="position: relative; overflow: scroll; width: 100%; height: 400px;"><ul class="todo-list sortable ui-sortable" style="overflow: scroll; width: 100%; height: 100%;">
                                                 <li class="clearfix"><span class="drag-drop"><i></i></span>
-                                                    <div class="todo-title">Sed ut perspiciatis unde omnis iste</div>
-                                                    <div class="todo-actions pull-right clearfix"><a href="#" class="todo-complete"><i class="fa fa-check"></i></a><a href="#" class="todo-edit"><i class="fa fa-edit"></i></a><a href="#" class="todo-remove"><i class="fa fa-trash-o"></i></a>
+                                                    <div class="todo-title">Walk Tim Every Monday</div>
+                                                    <div class="todo-actions pull-right clearfix"><a href="#" class="todo-complete"><i class="fa fa-check"></i></a><a href="#" class="todo-edit"><i class="fa fa-phone"></i></a><a href="#" class="todo-remove"><i class="fa fa-question"></i></a>
                                                     </div>
                                                 </li>
                                                 <li class="clearfix"><span class="drag-drop"><i></i></span>
-                                                    <div class="todo-title">Sed ut perspiciatis unde omnis iste</div>
-                                                    <div class="todo-actions pull-right clearfix"><a href="#" class="todo-complete"><i class="fa fa-check"></i></a><a href="#" class="todo-edit"><i class="fa fa-edit"></i></a><a href="#" class="todo-remove"><i class="fa fa-trash-o"></i></a>
+                                                    <div class="todo-title">Feed Tim Every Monday</div>
+                                                    <div class="todo-actions pull-right clearfix"><a href="#" class="todo-complete"><i class="fa fa-check"></i></a><a href="#" class="todo-edit"><i class="fa fa-phone"></i></a><a href="#" class="todo-remove"><i class="fa fa-question"></i></a>
                                                     </div>
                                                 </li>
                                                 <li class="clearfix"><span class="drag-drop"><i></i></span>
-                                                    <div class="todo-title">Sed ut perspiciatis unde omnis iste</div>
-                                                    <div class="todo-actions pull-right clearfix"><a href="#" class="todo-complete"><i class="fa fa-check"></i></a><a href="#" class="todo-edit"><i class="fa fa-edit"></i></a><a href="#" class="todo-remove"><i class="fa fa-trash-o"></i></a>
+                                                    <div class="todo-title">Take Sue to the Vet on Monday</div>
+                                                    <div class="todo-actions pull-right clearfix"><a href="#" class="todo-complete"><i class="fa fa-check"></i></a><a href="#" class="todo-edit"><i class="fa fa-phone"></i></a><a href="#" class="todo-remove"><i class="fa fa-question"></i></a>
                                                     </div>
                                                 </li>
                                             </ul><div class="slimScrollBar" style="background: rgb(0, 0, 0); width: 7px; position: absolute; top: 11px; opacity: 0.4; display: none; border-radius: 7px; z-index: 99; right: 1px; height: 127.033px;"></div><div class="slimScrollRail" style="width: 7px; height: 100%; position: absolute; top: 0px; display: none; border-radius: 7px; background: rgb(51, 51, 51); opacity: 0.2; z-index: 90; right: 1px;"></div></div>
@@ -374,7 +381,6 @@
 <script src="vendors/jquery-notific8/jquery.notific8.min.js"></script>
 <script src="vendors/jquery-highcharts/highcharts.js"></script>
 <script src="js/jquery.menu.js"></script>
-<script src="vendors/jquery-pace/pace.min.js"></script>
 <script src="vendors/holder/holder.js"></script>
 <script src="vendors/responsive-tabs/responsive-tabs.js"></script>
 <script src="vendors/jquery-news-ticker/jquery.newsTicker.min.js"></script>
