--- a/joblist_care.html
+++ b/joblist_care.html
@@ -108,7 +108,7 @@
                         <div class="row">
                             <div class="col-xs-4"><img src="./images/pet01.png" style="width: 70px; height: 70px;" class="media-object"></div>
                             <div class="group-info col-xs-8">
-                                Cat: Kitty
+                                Cat: Jojo
                                 <button type="button" class="btn btn-info btn-xs btn-to-right">Share <i class="fa fa-share-square-o"></i></button>
                                 <p><i class="fa fa-usd"></i><i class="fa fa-usd"></i><i class="fa fa-usd"></i></p>
                                 <p>I am leaving for a business trip, need someone to take care of my cat</p>
@@ -122,10 +122,10 @@
                         <div class="row">
                             <div class="col-xs-4"><img src="./images/pet02.png" style="width: 70px; height: 70px;" class="media-object"></div>
                             <div class="group-info col-xs-8">
-                                Cat: Kitty
+                                Cat: May
                                 <button type="button" class="btn btn-info btn-xs btn-to-right">Share <i class="fa fa-share-square-o"></i></button>
-                                <p><i class="fa fa-usd"></i><i class="fa fa-usd"></i><i class="fa fa-usd"></i></p>
-                                <p>I am leaving for a business trip, need someone to take care of my cat</p>
+                                <p><i class="fa fa-usd"></i></p>
+                                <p>We are leaving home for a month, need someone to take care of my cat</p>
                             </div>
 
                         </div>
@@ -139,7 +139,7 @@
                                 Cat: Kitty
                                 <button type="button" class="btn btn-info btn-xs btn-to-right">Share <i class="fa fa-share-square-o"></i></button>
                                 <p><i class="fa fa-usd"></i><i class="fa fa-usd"></i><i class="fa fa-usd"></i></p>
-                                <p>I am leaving for a business trip, need someone to take care of my cat</p>
+                                <p>My mom is coming to live with us for three month, she is allergic to my cat</p>
                             </div>
 
                         </div>
@@ -150,10 +150,10 @@
                         <div class="row">
                             <div class="col-xs-4"><img src="./images/pet04.png" style="width: 70px; height: 70px;" class="media-object"></div>
                             <div class="group-info col-xs-8">
-                                Cat: Kitty
+                                Dog: Dough
                                 <button type="button" class="btn btn-info btn-xs btn-to-right">Share <i class="fa fa-share-square-o"></i></button>
-                                <p><i class="fa fa-usd"></i><i class="fa fa-usd"></i><i class="fa fa-usd"></i></p>
-                                <p>I am leaving for a business trip, need someone to take care of my cat</p>
+                                <p><i class="fa fa-usd"></i></p>
+                                <p>Dough is very cute, he needs someone to play with him at weekday</p>
                             </div>
 
                         </div>
@@ -164,10 +164,10 @@
                         <div class="row">
                             <div class="col-xs-4"><img src="./images/pet05.png" style="width: 70px; height: 70px;" class="media-object"></div>
                             <div class="group-info col-xs-8">
-                                Cat: Kitty
+                                Dog: Cookie
                                 <button type="button" class="btn btn-info btn-xs btn-to-right">Share <i class="fa fa-share-square-o"></i></button>
                                 <p><i class="fa fa-usd"></i><i class="fa fa-usd"></i><i class="fa fa-usd"></i></p>
-                                <p>I am leaving for a business trip, need someone to take care of my cat</p>
+                                <p>I am leaving for a business trip, need someone to take care of my dog</p>
                             </div>
 
                         </div>
