--- a/grouplist_care.html
+++ b/grouplist_care.html
@@ -122,7 +122,7 @@
                             <div class="row">
                                 <div class="col-xs-4"><img src="./images/group02.png" style="width: 70px; height: 70px;" class="media-object"></div>
                                 <div class="group-info col-xs-8">
-                                    Group Apple <button type="button" class="btn btn-info btn-xs btn-to-right apply-btn-out">Apply </button>
+                                    Group Banana <button type="button" class="btn btn-info btn-xs btn-to-right apply-btn-out">Apply </button>
                                     <p><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i></p>
                                     <p>We have been taking care of: bulldog, golden retriever</p>
                                 </div>
@@ -135,7 +135,7 @@
                             <div class="row">
                                 <div class="col-xs-4"><img src="./images/group03.png" style="width: 70px; height: 70px;" class="media-object"></div>
                                 <div class="group-info col-xs-8">
-                                    Group Apple <button type="button" class="btn btn-info btn-xs btn-to-right apply-btn-out">Apply </button>
+                                    Group Cherry <button type="button" class="btn btn-info btn-xs btn-to-right apply-btn-out">Apply </button>
                                     <p><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i></p>
                                     <p>We have been taking care of: bulldog, golden retriever</p>
                                 </div>
@@ -147,7 +147,7 @@
                             <div class="row">
                                 <div class="col-xs-4"><img src="./images/group04.png" style="width: 70px; height: 70px;" class="media-object"></div>
                                 <div class="group-info col-xs-8">
-                                    Group Apple <button type="button" class="btn btn-info btn-xs btn-to-right apply-btn-out">Apply </button>
+                                    Group Date <button type="button" class="btn btn-info btn-xs btn-to-right apply-btn-out">Apply </button>
                                     <p><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i></p>
                                     <p>We have been taking care of: bulldog, golden retriever</p>
                                 </div>
@@ -160,7 +160,7 @@
                             <div class="row">
                                 <div class="col-xs-4"><img src="./images/group05.png" style="width: 70px; height: 70px;" class="media-object"></div>
                                 <div class="group-info col-xs-8">
-                                    Group Apple <button type="button" class="btn btn-info btn-xs btn-to-right apply-btn-out">Apply </button>
+                                    Group Elderberry <button type="button" class="btn btn-info btn-xs btn-to-right apply-btn-out">Apply </button>
                                     <p><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i></p>
                                     <p>We have been taking care of: bulldog, golden retriever</p>
                                 </div>
