New owner_group_chat

--- a/grouplist_care.html
+++ b/grouplist_care.html
@@ -272,7 +272,7 @@
             $(".group-detail").show();
         });
         $(".back-btn").click(function(){
-            $(".group-list").show();
+            $(".group-list").show();group_chat.html
             $(".group-detail").hide();
         });
         $(".apply-btn").click(function(){
