New owner_group_chat

--- a/grouplist_care.html
+++ b/grouplist_care.html
@@ -176,6 +176,10 @@
                             <table class="table table-striped table-hover">
                                 <tbody>
                                 <tr>
+                                    <td>Group Name</td>
+                                    <td>Apple</td>
+                                </tr>
+                                <tr>
                                     <td>Group Rating</td>
                                     <td><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i></td>
                                 </tr>
@@ -232,7 +236,7 @@
             <!--END CONTENT-->
         </div>
         <footer>
-            <div class="btn-group btn-group-justified"><a href="#" role="button" class="btn btn-info">Community</a><a href="group_chat.html" role="button" class="btn btn-success">Me</a><a role="button" class="btn btn-default">Contact</a>
+            <div class="btn-group btn-group-justified"><a href="#" role="button" class="btn btn-info active">Community</a><a href="group_chat.html" role="button" class="btn btn-success">Me</a><a role="button" class="btn btn-default">Contact</a>
             </div>
         </footer>
         <!--END FOOTER-->
@@ -272,7 +276,7 @@
             $(".group-detail").show();
         });
         $(".back-btn").click(function(){
-            $(".group-list").show();group_chat.html
+            $(".group-list").show();
             $(".group-detail").hide();
         });
         $(".apply-btn").click(function(){
