--- a/joblist_care.html
+++ b/joblist_care.html
@@ -103,83 +103,179 @@
         <div id="page-wrapper">
             <!--BEGIN CONTENT-->
             <div class="page-content" style="padding-top:80px;">
-                <div class="panel">
-                    <div class="panel-body">
-                        <div class="row">
-                            <div class="col-xs-4"><img src="./images/pet01.png" style="width: 70px; height: 70px;" class="media-object"></div>
-                            <div class="group-info col-xs-8">
-                                Cat: Jojo
-                                <button type="button" class="btn btn-info btn-xs btn-to-right">Share <i class="fa fa-share-square-o"></i></button>
-                                <p><i class="fa fa-usd"></i><i class="fa fa-usd"></i><i class="fa fa-usd"></i></p>
-                                <p>I am leaving for a business trip, need someone to take care of my cat</p>
-                            </div>
+                <div class="job-list">
+                    <div class="panel job-elm">
+                        <div class="panel-body">
+                            <div class="row">
+                                <div class="col-xs-4"><img src="./images/pet01.png" style="width: 70px; height: 70px;" class="media-object"></div>
+                                <div class="group-info col-xs-8">
+                                    Cat: Jojo
+                                    <button type="button" class="btn btn-info btn-xs btn-to-right">Share <i class="fa fa-share-square-o"></i></button>
+                                    <p><i class="fa fa-usd"></i><i class="fa fa-usd"></i><i class="fa fa-usd"></i></p>
+                                    <p>I am leaving for a business trip, need someone to take care of my cat</p>
+                                </div>
 
+                            </div>
+                        </div>
+                    </div>
+                    <div class="panel job-elm">
+                        <div class="panel-body">
+                            <div class="row">
+                                <div class="col-xs-4"><img src="./images/pet02.png" style="width: 70px; height: 70px;" class="media-object"></div>
+                                <div class="group-info col-xs-8">
+                                    Cat: May
+                                    <button type="button" class="btn btn-info btn-xs btn-to-right">Share <i class="fa fa-share-square-o"></i></button>
+                                    <p><i class="fa fa-usd"></i></p>
+                                    <p>We are leaving home for a month, need someone to take care of my cat</p>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="panel job-elm">
+                        <div class="panel-body">
+                            <div class="row">
+                                <div class="col-xs-4"><img src="./images/pet03.png" style="width: 70px; height: 70px;" class="media-object"></div>
+                                <div class="group-info col-xs-8">
+                                    Cat: Kitty
+                                    <button type="button" class="btn btn-info btn-xs btn-to-right">Share <i class="fa fa-share-square-o"></i></button>
+                                    <p><i class="fa fa-usd"></i><i class="fa fa-usd"></i><i class="fa fa-usd"></i></p>
+                                    <p>My mom is coming to live with us for three month, she is allergic to my cat</p>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="panel job-elm">
+                        <div class="panel-body">
+                            <div class="row">
+                                <div class="col-xs-4"><img src="./images/pet04.png" style="width: 70px; height: 70px;" class="media-object"></div>
+                                <div class="group-info col-xs-8">
+                                    Dog: Dough
+                                    <button type="button" class="btn btn-info btn-xs btn-to-right">Share <i class="fa fa-share-square-o"></i></button>
+                                    <p><i class="fa fa-usd"></i></p>
+                                    <p>Dough is very cute, he needs someone to play with him at weekday</p>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="panel job-elm">
+                        <div class="panel-body">
+                            <div class="row">
+                                <div class="col-xs-4"><img src="./images/pet05.png" style="width: 70px; height: 70px;" class="media-object"></div>
+                                <div class="group-info col-xs-8">
+                                    Dog: Cookie
+                                    <button type="button" class="btn btn-info btn-xs btn-to-right">Share <i class="fa fa-share-square-o"></i></button>
+                                    <p><i class="fa fa-usd"></i><i class="fa fa-usd"></i><i class="fa fa-usd"></i></p>
+                                    <p>I am leaving for a business trip, need someone to take care of my dog</p>
+                                </div>
+
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="panel">
-                    <div class="panel-body">
-                        <div class="row">
-                            <div class="col-xs-4"><img src="./images/pet02.png" style="width: 70px; height: 70px;" class="media-object"></div>
-                            <div class="group-info col-xs-8">
-                                Cat: May
-                                <button type="button" class="btn btn-info btn-xs btn-to-right">Share <i class="fa fa-share-square-o"></i></button>
-                                <p><i class="fa fa-usd"></i></p>
-                                <p>We are leaving home for a month, need someone to take care of my cat</p>
-                            </div>
+                <div class = "job-detail">
+                    <div class="row">
+                        <div class="col-xs-4"><img src="./images/pet01.png" style="width: 100px; height: 100px;" class="media-object"></div>
+                        <div class="col-xs-8">
+                            <table class="table table-striped table-hover">
+                                <tbody>
+                                <tr>
+                                    <td width="10%">Pet Owner</td>
+                                    <td>Diane Harris</td>
+                                </tr>
+                                <tr>
+                                    <td width="10%">Pet Name</td>
+                                    <td>Jojo</td>
+                                </tr>
+                                <tr>
+                                    <td width="10%">Pet Type</td>
+                                    <td>Cat</td>
+                                </tr>
+                                <tr>
+                                    <td width="10%">Pet Breed</td>
+                                    <td>British shorthair
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td width="50%">Pet Age</td>
+                                    <td>3</td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                    <div class="panel">
+                        <div class="panel-body">
+                            <div class="row">
+                                <div class="task-info col-xs-6">
+                                    <h5>Task 1</h5>
+                                </div>
 
+                            </div>
+                            <div class="row">
+                                <div class="col-xs-12">
+                                    <p> Feed Jojo everyday at 5 p.m.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="panel">
+                        <div class="panel-body">
+                            <div class="row">
+                                <div class="task-info col-xs-6">
+                                    <h5>Task 2</h5>
+                                </div>
+
+                            </div>
+                            <div class="row">
+                                <div class="col-xs-12">
+                                    <p> Wash Jojo every week</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="panel">
+                        <div class="panel-body">
+                            <div class="row">
+                                <div class="task-info col-xs-6">
+                                    <h5>Task 3</h5>
+                                </div>
+
+                            </div>
+                            <div class="row">
+                                <div class="col-xs-12">
+                                    <p> Wash Jojo every week</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="panel">
+                        <div class="panel-body">
+                            <div class="row">
+                                <div class="task-info col-xs-6">
+                                    <h5>Task 4</h5>
+                                </div>
+
+                            </div>
+                            <div class="row">
+                                <div class="col-xs-12">
+                                    <p> Wash Jojo every week</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="panel">
-                    <div class="panel-body">
-                        <div class="row">
-                            <div class="col-xs-4"><img src="./images/pet03.png" style="width: 70px; height: 70px;" class="media-object"></div>
-                            <div class="group-info col-xs-8">
-                                Cat: Kitty
-                                <button type="button" class="btn btn-info btn-xs btn-to-right">Share <i class="fa fa-share-square-o"></i></button>
-                                <p><i class="fa fa-usd"></i><i class="fa fa-usd"></i><i class="fa fa-usd"></i></p>
-                                <p>My mom is coming to live with us for three month, she is allergic to my cat</p>
-                            </div>
 
-                        </div>
-                    </div>
-                </div>
-                <div class="panel">
-                    <div class="panel-body">
-                        <div class="row">
-                            <div class="col-xs-4"><img src="./images/pet04.png" style="width: 70px; height: 70px;" class="media-object"></div>
-                            <div class="group-info col-xs-8">
-                                Dog: Dough
-                                <button type="button" class="btn btn-info btn-xs btn-to-right">Share <i class="fa fa-share-square-o"></i></button>
-                                <p><i class="fa fa-usd"></i></p>
-                                <p>Dough is very cute, he needs someone to play with him at weekday</p>
-                            </div>
 
-                        </div>
-                    </div>
-                </div>
-                <div class="panel">
-                    <div class="panel-body">
-                        <div class="row">
-                            <div class="col-xs-4"><img src="./images/pet05.png" style="width: 70px; height: 70px;" class="media-object"></div>
-                            <div class="group-info col-xs-8">
-                                Dog: Cookie
-                                <button type="button" class="btn btn-info btn-xs btn-to-right">Share <i class="fa fa-share-square-o"></i></button>
-                                <p><i class="fa fa-usd"></i><i class="fa fa-usd"></i><i class="fa fa-usd"></i></p>
-                                <p>I am leaving for a business trip, need someone to take care of my dog</p>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
 
 
             </div>
             <!--END CONTENT-->
         </div>
         <footer>
-            <div class="btn-group btn-group-justified"><a href="#" role="button" class="btn btn-info">Community</a><a href="group_chat.html" role="button" class="btn btn-success">Me</a><a role="button" class="btn btn-default">Contact</a>
+            <div class="btn-group btn-group-justified"><a href="#" role="button" class="btn btn-info active">Community</a><a href="group_chat.html" role="button" class="btn btn-success">Me</a><a role="button" class="btn btn-default">Contact</a>
             </div>
         </footer>
         <!--END FOOTER-->
@@ -213,6 +309,11 @@
         console.log(1);
         $('.group-info button').click(function(){
             window.location.href = "group_chat.html?x=1";
+        });
+        $(".job-detail").hide();
+        $(".job-elm").click(function(){
+            $(".job-detail").show();
+            $(".job-list").hide();
         });
     });
 </script>
